--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-rscss/config"]
+  "extends": ["stylelint-config-standard", "stylelint-rscss/config"],
+  "rules": {
+    "property-no-vendor-prefix": null,
+    "selector-class-pattern": "[a-z\\-][a-z0-9\\-]+"
+  }
 }
