--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "format-check": "prettier --check .",
     "lint": "eslint public",
     "lint-styles": "stylelint public/styles/*",
-    "serve": "http-server -c-1 public",
+    "dev": "node ./dev/server.mjs public",
     "test": "playwright test"
   },
   "devDependencies": {
     "@playwright/test": "^1.33.0",
     "eslint": "^8.20.0",
     "eslint-plugin-compat": "^4.0.2",
-    "http-server": "^14.1.1",
+    "mime": "^3.0.0",
     "prettier": "^3.1.0",
     "stylelint": "^15.6.1",
     "stylelint-config-standard": "^34.0.0",
-    "stylelint-rscss": "^0.4.0"
+    "stylelint-rscss": "^0.4.0",
+    "ws": "^8.14.2"
   }
 }
