--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "engines": {
     "node": ">=20"
   },
+  "type": "module",
   "scripts": {
-    "dev": "node ./dev/server.mjs public",
+    "dev": "node ./dev/server.js public",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
     "lint": "eslint .",
@@ -38,7 +39,7 @@
     "eslint-plugin-compat": "^4.0.2",
     "mime": "^4.0.0",
     "prettier": "^3.1.0",
-    "stylelint": "^15.6.1",
+    "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-rscss": "^0.4.0",
     "ws": "^8.14.2"
