--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "node ./dev/server.js public",
+    "dev": "s4d public --spa",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
     "lint": "eslint .",
@@ -37,11 +37,10 @@
     "c8": "^9.1.0",
     "eslint": "^8.20.0",
     "eslint-plugin-compat": "^4.0.2",
-    "mime": "^4.0.0",
     "prettier": "^3.1.0",
+    "s4d": "^0.1.1",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
-    "stylelint-rscss": "^0.4.0",
-    "ws": "^8.14.2"
+    "stylelint-rscss": "^0.4.0"
   }
 }
