update dev dependencies

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-rscss/config"],
+  "extends": "stylelint-config-standard",
   "rules": {
     "property-no-vendor-prefix": null,
-    "selector-class-pattern": "[a-z\\-][a-z0-9\\-]+"
+    "selector-class-pattern": "^[\\-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$"
   }
 }
