--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "test-coverage": "bash scripts/test-coverage.sh"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@playwright/test": "^1.33.0",
     "c8": "^10.1.2",
-    "eslint": "^8.20.0",
-    "eslint-plugin-compat": "^5.0.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-compat": "^6.0.2",
     "prettier": "^3.1.0",
     "s4d": "^0.2.0",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-rscss": "^0.4.0"
-  }
+    "stylelint": "^16.12.0",
+    "stylelint-config-standard": "^36.0.1"
+  },
+  "browserslist": [
+    "defaults",
+    "not op_mini all"
+  ]
 }
